获取用户信息是get请求
