# fastserver/docs/swagger.yaml
@@ -350,6 +350,11 @@ paths:
       - application/json
       description: Create a new API
       parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Create API request
         in: body
         name: api
@@ -376,6 +381,11 @@ paths:
       - application/json
       description: Update an existing API by ID
       parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: API ID
         in: path
         name: apiId
@@ -407,6 +417,11 @@ paths:
       - application/json
       description: Delete multiple APIs by their IDs
       parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Delete API request
         in: body
         name: apiIds
@@ -432,6 +447,12 @@ paths:
       consumes:
       - application/json
       description: Get the API tree categorized by the Category field
+      parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -452,6 +473,11 @@ paths:
       - application/json
       description: Get a list of APIs
       parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Request method
         in: query
         name: method
@@ -496,6 +522,11 @@ paths:
       - application/json
       description: Create a new menu
       parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Create menu request
         in: body
         name: menu
@@ -522,6 +553,11 @@ paths:
       - application/json
       description: Update an existing menu by ID
       parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Menu ID
         in: path
         name: menuId
@@ -553,6 +589,11 @@ paths:
       - application/json
       description: Delete multiple menus by their IDs
       parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Delete menu request
         in: body
         name: menuIds
@@ -578,6 +619,12 @@ paths:
       consumes:
       - application/json
       description: Get the menu tree
+      parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -597,6 +644,12 @@ paths:
       consumes:
       - application/json
       description: Get a list of menus
+      parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -617,6 +670,11 @@ paths:
       - application/json
       description: Get a list of operation logs
       parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Request method
         in: query
         name: method
@@ -661,6 +719,11 @@ paths:
       - application/json
       description: Delete multiple operation logs by their IDs
       parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Delete operation log request
         in: body
         name: operationLogIds
@@ -687,6 +750,11 @@ paths:
       - application/json
       description: Create a new role
       parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Create role request
         in: body
         name: role
@@ -713,6 +781,11 @@ paths:
       - application/json
       description: Update an existing role by ID
       parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Role ID
         in: path
         name: roleId
@@ -744,6 +817,11 @@ paths:
       - application/json
       description: Get the APIs for a role by ID
       parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Role ID
         in: path
         name: roleId
@@ -768,6 +846,11 @@ paths:
       - application/json
       description: Update the APIs for a role by ID
       parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Role ID
         in: path
         name: roleId
@@ -799,6 +882,11 @@ paths:
       - application/json
       description: Get the menus for a role by ID
       parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Role ID
         in: path
         name: roleId
@@ -823,6 +911,11 @@ paths:
       - application/json
       description: Update the menus for a role by ID
       parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Role ID
         in: path
         name: roleId
@@ -854,6 +947,11 @@ paths:
       - application/json
       description: Delete multiple roles by their IDs
       parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Delete role request
         in: body
         name: roleIds
@@ -880,6 +978,11 @@ paths:
       - application/json
       description: Get a list of roles
       parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Role name
         in: query
         name: name
@@ -916,6 +1019,11 @@ paths:
       - application/json
       description: Get the accessible menu tree for a user by user ID
       parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: User ID
         in: path
         name: userId
@@ -941,6 +1049,11 @@ paths:
       - application/json
       description: Get the accessible menus for a user by user ID
       parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: User ID
         in: path
         name: userId
@@ -966,6 +1079,11 @@ paths:
       - application/json
       description: 批量删除用户
       parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Delete user request
         in: body
         name: DeleteUserRequest
@@ -992,6 +1110,11 @@ paths:
       - application/json
       description: 更新用户登录密码
       parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Change password request
         in: body
         name: ChangePwdRequest
@@ -1018,6 +1141,11 @@ paths:
       - application/json
       description: 创建用户
       parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: Create user request
         in: body
         name: CreateUserRequest
@@ -1043,6 +1171,12 @@ paths:
       consumes:
       - application/json
       description: 获取当前登录用户信息
+      parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       produces:
       - application/json
       responses:
@@ -1063,6 +1197,11 @@ paths:
       - application/json
       description: 获取用户列表
       parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: User list request
         in: body
         name: UserListRequest
@@ -1089,6 +1228,11 @@ paths:
       - application/json
       description: 更新用户
       parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
       - description: User ID
         in: path
         name: userId
